<resources>
    <string name="app_name">Phone Book</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="login">Login</string>
    <string name="dont_have_account_sign_up">Don\'t have account? Sign up!</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="the_app_icon">the app icon</string>
    <string name="from">from</string>
    <string name="il_studio">il studio</string>
    <string name="icon_app">icon app</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_ok">Sign up OK!</string>
    <string name="please_insert_all_required_fields">Please insert all required fields</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="sign_up_error">Sign up error</string>
    <string name="login_error">Login error</string>
    <string name="arrow_downward">arrow downward</string>
    <string name="plus">plus</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="x_icon">x icon</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="update_ok">Update OK!</string>
    <string name="update_error">Update Error</string>
    <string name="delete_error">Delete Error</string>
    <string name="delete_ok">Delete OK!</string>
    <string name="person_icon">person icon</string>
    <string name="new_contact">New Contact</string>
    <string name="select_an_image">Select an Image</string>
    <string name="save">Save</string>
    <string name="image_profile">image profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="profile">Profile</string>
    <string name="delete_account_error">Delete account error</string>
    <string name="operation_canceled">Operation canceled</string>
    <string name="i_have_a_account">I have a account</string>
    <string name="close_menu">close menu</string>
    <string name="open_menu">open menu</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account_ok">Delete Account ok</string>
</resources>