<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/the_app_icon"
        android:src="@drawable/app_icon"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/username"
            android:gravity="start"
            android:layout_marginBottom="6dp"
            android:inputType="text"
            android:autofillHints="username"
            />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:gravity="start"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:autofillHints="no"
            />

        <CheckBox
            android:id="@+id/checkbox_logged"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged"
            android:layout_marginBottom="24dp"
            />

        <Button
            android:id="@+id/button_login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/dont_have_account_sign_up"
        android:gravity="center"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/text_recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_your_password"
        android:gravity="center"
        android:layout_above="@id/text_signup"
        android:layout_margin="20dp"
        />
</RelativeLayout>