<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity"
    >
    <LinearLayout
        android:id="@+id/header_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="8dp"
        android:layout_alignParentTop="true"
        >
        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@drawable/ic_close"
            android:layout_gravity="start"
            android:contentDescription="@string/x_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/contact_detail"
            android:textColor="@color/black"
            android:textSize="32sp"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/profile1"
        android:layout_centerInParent="true"
        android:layout_below="@id/header_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/person_icon"
        android:focusable="false"
        />

    <LinearLayout
        android:id="@+id/inputs_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_profile"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:layout_marginBottom="24dp"
        >
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:enabled="false"
            android:layout_marginBottom="12dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:autofillHints="no"
            android:inputType="text"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:enabled="false"
            android:text="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:autofillHints="no"
            android:hint="@string/password"
            />
    </LinearLayout>

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputs_content"
        android:text="@string/edit_profile"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/container_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="10dp"
        android:layout_below="@+id/inputs_content"
        android:visibility="gone"
        >
        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="14dp"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button_delete_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>