<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactDetailActivity"
    >
    <LinearLayout
        android:id="@+id/header_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="8dp"
        android:layout_alignParentTop="true"
        >
        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@drawable/ic_close"
            android:layout_gravity="start"
            android:contentDescription="@string/x_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/contact_detail"
            android:textColor="@color/black"
            android:textSize="32sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_edits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/image_contact"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/person_icon"
            android:focusable="false"
            android:src="@drawable/ic_profile_default" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:autofillHints="none"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="6dp"
            android:enabled="false"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="52dp"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:autofillHints="none"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="52dp"
            />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp"
            android:autofillHints="none"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:enabled="false"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="52dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_buttons1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="10dp"
        android:layout_below="@id/content_edits"
        >
        <Button
            android:id="@+id/button_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="14dp"
            />

        <Button
            android:id="@+id/button_remove"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_buttons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="10dp"
        android:layout_below="@id/content_edits"
        android:visibility="gone"
        >
        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="14dp"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />

    </LinearLayout>
</RelativeLayout>