<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewContactActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/header_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="8dp"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        >
        <ImageButton
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@drawable/ic_close"
            android:layout_gravity="start"
            android:contentDescription="@string/x_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/new_contact"
            android:textColor="@color/black"
            android:textSize="32sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_edits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header_content"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="20dp"
        >
        <ImageView
            android:id="@+id/image_contact"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_profile_default"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/person_icon"
            />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:hint="@string/name"
            android:autofillHints="none"
            android:inputType="text"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="6dp"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:hint="@string/email"
            android:autofillHints="none"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:hint="@string/phone"
            android:autofillHints="none"
            android:inputType="phone"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            />

        <Button
            android:id="@+id/button_add"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            />
    </LinearLayout>
</RelativeLayout>