<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SplashScreenActivity"
    >

    <ImageView
        android:id="@+id/img_app_icon"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@drawable/app_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/icon_app"
        />

    <TextView
        android:id="@+id/text_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="@color/border_gray"
        app:layout_constraintBottom_toTopOf="@id/img_company_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/img_company_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/company_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/il_studio"
        />



</androidx.constraintlayout.widget.ConstraintLayout>